--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -15,7 +15,7 @@
 samtimeout=60
 
 # Time before going to the next core in seconds
-gametimer=180
+gametimer="180"
 
 # Start SAM only from MiSTer main menu
 # If you change this to menuonly is set to "No", SAM will always start after you put down the controller. 
@@ -29,7 +29,7 @@ corelist="amiga,arcade,fds,genesis,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
 # Options are Global (Mute global volume) No (to always play game sounds) or Core (to mute cores individually). "Yes" can also be set which is the same as core. 
 # Please use "core" for BGM support or use the menu to configure BGM automatically
-mute="no"
+mute="Core"
 
 # How do we exit SAM?
 # "No" - SAM will reboot to MiSTer Menu when a button is pushed. 
@@ -40,7 +40,7 @@ playcurrentgame="No"
 # Good to use if you have young children. Limits rom selection to ESRB rated games with the "All Ages" label
 # Please update SAM after enabling this to download the ESRB game whitelists
 # Some cores like MegaCD will only have very few games so it's best to use coreweight which you can find further down in this ini
-kids_safe="Yes"
+kids_safe="no"
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
@@ -48,14 +48,14 @@ kids_safe="Yes"
 roulettetimer="500"
 
 # The Amigavision image contains demos and games. Here you can select what Amiga content you want SAM to show. Options are "Demos", "Games" or "All"
-amigaselect="All"
+amigaselect="all"
 
 # Alternative way of selecting cores. Based on how many games a system has.
-coreweight="Yes"
+coreweight="No"
 
 # --------- ARCADE ORIENTATION ---------
 # Set Arcade orientation to "horizontal" "vertical" or leave empty
-arcadeorient=""
+arcadeorient="horizontal"
 
 # --------- PATH FILTER ---------
 # If you would like to only play games from a subdirectory of your games folder, put it here
@@ -79,7 +79,7 @@ genesispathfilter=""
 ggpathfilter=""
 megacdpathfilter=""
 neogeopathfilter=""
-nespathfilter=""
+nespathfilter="(Japan)"
 s32xpathfilter=""
 smspathfilter=""
 snespathfilter=""
@@ -98,6 +98,10 @@ exclude=( readme unsupported bios )
 samvideo="yes"
 # Choose the video output, either HDMI or CRT. Note that only archive playback is supported for "samvideo_source" if using CRT mode.
 samvideo_output="hdmi"
+samvideo_crtmode="video_mode=640,16,64,80,240,1,3,14,12380"
+# Change the following setting if you can only hear the audio of the video and SAM shows the Menu core. Some displays need more time.
+# Setting should be 2 or more. Try higher values if you encounter issues
+samvideo_displaywait="2"
 # Alternate with every core played, play video like another core or only play videos - Options are alternate, core or only
 samvideo_freq="alternate"
 #Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
@@ -113,12 +117,12 @@ sv_youtubelist="/media/fat/Scripts/.MiSTer_SAM/samvideo_list.txt"
 # -------- TTY2OLED SETTINGS -------
 # Options for https://github.com/venice1200/MiSTer_tty2oled - a Hardware Add-On display for MiSTer
 # "Yes" shows the text name of the game being played
-ttyenable="no"
+ttyenable="Yes"
 
 # -------- BGM SETTINGS -------
 # SAM supports BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). 
 # It's best practice to set up BGM through the SAM menu (Select "Background Music Player")
-bgm="no"
+bgm="No"
 # Change bgmplay to no if songs play twice in BGM
 bgmplay="Yes"
 # Stop BGM when SAM stops
@@ -159,14 +163,14 @@ ttydisplayswitch="2"
 # Display scrolling text with bigger font, omit system info 
 ttybig="no"
 # A lot of games have info in brackets. This will remove brackets from tty2oled output
-ttyname_cleanup="no"
+ttyname_cleanup="No"
 # How fast the scrolling speed should be. Options are slower, normal or faster
-ttyscroll_speed="normal"
+ttyscroll_speed="faster"
 
 # -------- DEBUG --------
-samdebug="Yes"
+samdebug="No"
 # Write debug message to file at /tmp/samdebug.log
-samdebuglog="No"
+samdebuglog="Yes"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
