--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -98,13 +98,13 @@ exclude=( readme unsupported bios )
 samvideo="yes"
 # Choose the video output, either HDMI or CRT. Note that only archive playback is supported for "samvideo_source" if using CRT mode.
 samvideo_output="hdmi"
-samvideo_crtmode="video_mode=640,16,64,80,240,1,3,14,12380"
+samvideo_crtmode="video_mode=640,-16,56,56,240,1,3,13,11350"
 # Change the following setting if you can only hear the audio of the video and SAM shows the Menu core. Some displays need more time.
 # Setting should be 2 or more. Try higher values if you encounter issues
 samvideo_displaywait="2"
 # Alternate with every core played, play video like another core or only play videos - Options are alternate, core or only
 samvideo_freq="alternate"
-#Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
+#Play videos from youtube, archive or local. SAM includes default lists (see further down to change those)
 samvideo_source="archive"
 # Customize lists for youtube, archive or local playback
 # Due to the MiSTer CPU not being very powerful, recommended video codec is XVID in 640x480 for HDMI or 640x240 for CRT
