--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -100,9 +100,9 @@ samvideo="yes"
 samvideo_output="crt"
 # Change the following setting if you can only hear the audio of the video and SAM shows the Menu core. Some displays need more time.
 # Setting should be 2 or more. Try higher values if you encounter issues
-samvideo_displaywait="2"
+samvideo_displaywait="3"
 # Alternate with every core played, play video like another core or only play videos - Options are alternate, core or only
-samvideo_freq="only"
+samvideo_freq="alternate"
 #Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
 samvideo_source="youtube"
 #For CRT playback on archive playback we use 640x240
