--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -93,6 +93,32 @@ psxpathfilter=""
 
 exclude=( readme unsupported bios )
 
+
+# -------- SAMVIDEO SETTINGS -------
+# Play videos in SAM (eg old video game commercials)
+samvideo="No"
+# Choose the video output, either HDMI or CRT. Note that only archive playback is supported for "samvideo_source" if using CRT mode.
+samvideo_output="HDMI"
+# Change the following setting if you can only hear the audio of the video and SAM shows the Menu core. Some displays need more time.
+# Setting should be 2 or more. Try higher values if you encounter issues
+samvideo_displaywait="3"
+# Alternate with every core played, play video like another core or only play videos - Options are alternate, core or only
+samvideo_freq="alternate"
+#Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
+samvideo_source="youtube"
+#For CRT playback on archive playback we use 640x240
+samvideo_crtmode640="video_mode=640,16,64,80,240,1,3,14,12380"
+#For CRT playback on youtube playback we use 320x240
+samvideo_crtmode320="video_mode=320,-16,32,32,240,1,3,13,5670"
+# Customize lists for youtube, archive or local playback
+# Due to the MiSTer CPU not being very powerful
+# Recommended video codec is XVID in 640x480 for HDMI or 640x240 for CRT
+samvideo_path="/media/fat/video"
+sv_archive_hdmilist="https://ia902700.us.archive.org/3/items/640x480_videogame_commercials/640x480_videogame_commercials_files.xml"
+sv_archive_crtlist="https://ia902700.us.archive.org/3/items/640x240_videogame_commercials/640x240_videogame_commercials_files.xml"
+sv_youtube_hdmilist="/media/fat/Scripts/.MiSTer_SAM/sv_yt360_list.txt"
+sv_youtube_crtlist="/media/fat/Scripts/.MiSTer_SAM/sv_yt240_list.txt"
+
 # -------- TTY2OLED SETTINGS -------
 # Options for https://github.com/venice1200/MiSTer_tty2oled - a Hardware Add-On display for MiSTer
 # "Yes" shows the text name of the game being played
