--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -105,7 +105,7 @@ samvideo_displaywait="3"
 # Alternate with every core played, play video like another core or only play videos - Options are alternate, core or only
 samvideo_freq="alternate"
 #Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
-samvideo_source="youtube"
+samvideo_source="archive"
 #For CRT playback on archive playback we use 640x240
 samvideo_crtmode640="video_mode=640,16,64,80,240,1,3,14,12380"
 #For CRT playback on youtube playback we use 320x240
