--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -114,8 +114,8 @@ samvideo_crtmode320="video_mode=320,-16,32,32,240,1,3,13,5670"
 # Due to the MiSTer CPU not being very powerful
 # Recommended video codec is XVID in 640x480 for HDMI or 640x240 for CRT
 samvideo_path="/media/fat/video"
-sv_archive_hdmilist="https://ia902700.us.archive.org/3/items/640x480_videogame_commercials/640x480_videogame_commercials_files.xml"
-sv_archive_crtlist="https://ia902700.us.archive.org/3/items/640x240_videogame_commercials/640x240_videogame_commercials_files.xml"
+sv_archive_hdmilist="https://archive.org/download/640x480_videogame_commercials/640x480_videogame_commercials_files.xml"
+sv_archive_crtlist="https://archive.org/download/640x240_videogame_commercials/640x240_videogame_commercials_files.xml"
 sv_youtube_hdmilist="/media/fat/Scripts/.MiSTer_SAM/sv_yt360_list.txt"
 sv_youtube_crtlist="/media/fat/Scripts/.MiSTer_SAM/sv_yt240_list.txt"
 
