--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -97,28 +97,23 @@ exclude=( readme unsupported bios )
 # -------- SAMVIDEO SETTINGS -------
 # Play videos in SAM (eg old video game commercials)
 samvideo="No"
-
 # Choose the video output, either HDMI or CRT. Note that only archive playback is supported for "samvideo_source" if using CRT mode.
 samvideo_output="HDMI"
-
 # Change the following setting if you can only hear the audio of the video and SAM shows the Menu core. Some displays need more time.
 # Setting should be 2 or more. Try higher values if you encounter issues
 samvideo_displaywait="3"
-
 # Alternate with every core played, play video like another core or only play videos - Options are alternate, core or only
 samvideo_freq="alternate"
-
 #Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
 samvideo_source="archive"
-
-#For HDMI playback if your device doesn't support 640x480 resolution. Set it to "800 600" or "1024 768" for example
+# Play a TV commercial of eg NES and than show a NES game
+samvideo_tvc="no"
+# For HDMI playback if your device doesn't support 640x480 resolution. Set it to "800 600" or "1024 768" for example
 sv_custom_vmode=""
-
-#For CRT playback on archive playback we use 640x240
+# For CRT playback on archive playback we use 640x240
 samvideo_crtmode640="video_mode=640,16,64,80,240,1,3,14,12380"
-#For CRT playback on youtube playback we use 320x240
+# For CRT playback on youtube playback we use 320x240
 samvideo_crtmode320="video_mode=320,-16,32,32,240,1,3,13,5670"
-
 # Customize lists for youtube, archive or local playback
 # Due to the MiSTer CPU not being very powerful
 # Recommended video codec is XVID in 640x480 for HDMI or 640x240 for CRT
