--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -106,7 +106,7 @@ samvideo_displaywait="3"
 samvideo_freq="alternate"
 #Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
 samvideo_source="archive"
-# Play a TV commercial of eg NES and than show a NES game
+# Play a TV commercial of eg NES and than show a NES game. Only works for archive.org list.
 samvideo_tvc="no"
 # For HDMI playback if your device doesn't support 640x480 resolution. Set it to "800 600" or "1024 768" for example
 sv_custom_vmode=""
