--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -96,6 +96,7 @@ exclude=( readme unsupported bios )
 
 # -------- SAMVIDEO SETTINGS -------
 # Play videos in SAM (eg old video game commercials)
+# ATTENTION: In order for SAMVIDEO to work, we will modify MiSTer.ini (adding a video_mode for menu core). Please check MiSTer.ini if you experience any issues.
 samvideo="No"
 # Choose the video output, either HDMI or CRT. Note that only archive playback is supported for "samvideo_source" if using CRT mode.
 samvideo_output="HDMI"
@@ -108,8 +109,8 @@ samvideo_freq="alternate"
 samvideo_source="archive"
 # Play a TV commercial of eg NES and than show a NES game. Only works for archive.org list.
 samvideo_tvc="no"
-# For HDMI playback if your device doesn't support 640x480 resolution. Set it to "800 600" or "1024 768" for example
-sv_custom_vmode=""
+# For HDMI playback if your device shows black bars, try setting sv_aspectfix_vmode to yes. 
+sv_aspectfix_vmode="no"
 # For CRT playback on archive playback we use 640x240
 samvideo_crtmode640="video_mode=640,16,64,80,240,1,3,14,12380"
 # For CRT playback on youtube playback we use 320x240
