--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -107,7 +107,7 @@ samvideo_displaywait="3"
 samvideo_freq="alternate"
 #Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
 samvideo_source="archive"
-# Play a TV commercial of eg NES and than show a NES game. Only works for archive.org list.
+# Play a TV commercial of eg SNES and than show the corresponding SNES game. Only works for archive.org list.
 samvideo_tvc="no"
 # For HDMI playback if your device shows black bars, try setting sv_aspectfix_vmode to yes. 
 sv_aspectfix_vmode="no"
