--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -22,8 +22,8 @@ gametimer=180
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode?
-# Valid options: amiga,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx
-corelist="amiga,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
+# Valid options: amiga,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,saturn,sms,snes,tgfx16,tgfx16cd,psx
+corelist="amiga,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,saturn,sms,snes,tgfx16,tgfx16cd,psx"
 
 # When SAM starts, mute global or core volume. Core volume can't be muted completely.
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
@@ -49,6 +49,9 @@ roulettetimer="500"
 
 # The Amigavision image contains demos and games. Here you can select what Amiga content you want SAM to show. Options are "Demos", "Games" or "All"
 amigaselect="All"
+
+# Some cores require a bios message to be skipped, eg FDS and Saturn. Try a value higher than 10
+skiptime="10"
 
 # Alternative way of selecting cores. Based on how many games a system has.
 coreweight="No"
