--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -60,6 +60,11 @@ coreweight="No"
 # Set Arcade orientation to "horizontal" "vertical" or leave empty
 arcadeorient=""
 
+# --------- GREATEST OF ALL TIME LIST ---------
+# This is a curated list of games for different cores with great Attract Modes.
+# Feel free to edit it to your liking at /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/sam_goat_list.txt
+sam_goat_list="no"
+
 # --------- PATH FILTER ---------
 # If you would like to only play games from a subdirectory of your games folder, put it here
 # Partial match is all you need. Can be part of the path or filename.
