--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -35,7 +35,7 @@ mute="No"
 # "No" - SAM will reboot to MiSTer Menu when a button is pushed. 
 # NOTE - If you push Start on your controller it will play the current game, any other button quits SAM. Set this up in SAM's menu under "Configure Exit behavior"
 # "Yes" - SAM will stay in the current game when exiting.
-playcurrentgame="No" 
+playcurrentgame="Yes" 
 
 # Good to use if you have young children. Limits rom selection to ESRB rated games with the "All Ages" label
 # Please update SAM after enabling this to download the ESRB game whitelists
