--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -42,6 +42,9 @@ playcurrentgame="Yes"
 # Some cores like MegaCD will only have very few games so it's best to use coreweight which you can find further down in this ini
 kids_safe="no"
 
+# How to handle duplicate roms. Can be "normal" or "strict". Strict will only keep one version of a game (so no betas, hacks etc..)
+dupe_mode="normal"
+
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
 # While SAM is primarily meant as a way to enjoy the pixel art of random games, roulette mode let's you play those games while continuing to shuffle.
