--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -37,14 +37,10 @@ mute="No"
 # "Yes" - SAM will stay in the current game when exiting.
 playcurrentgame="Yes" 
 
-# Good to use if you have young children. Limits rom selection to ESRB rated games with the "All Ages" label
-# Please update SAM after enabling this to download the ESRB game whitelists
-# Some cores like MegaCD will only have very few games so it's best to use coreweight which you can find further down in this ini
-kids_safe="no"
-
 # How to handle duplicate roms. Can be "normal" or "strict". Strict will only keep one version of a game (so no betas, hacks etc..)
 dupe_mode="normal"
 
+# ---------- SPECIAL MODES --------------
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
 # While SAM is primarily meant as a way to enjoy the pixel art of random games, roulette mode let's you play those games while continuing to shuffle.
@@ -53,8 +49,22 @@ roulettetimer="500"
 # The Amigavision image contains demos and games. Here you can select what Amiga content you want SAM to show. Options are "Demos", "Games" or "All"
 amigaselect="All"
 
+# Good to use if you have young children. Limits rom selection to ESRB rated games with the "All Ages" label
+# Please update SAM after enabling this to download the ESRB game whitelists
+# Some cores like MegaCD will only have very few games so it's best to use coreweight which you can find further down in this ini
+kids_safe="no"
+
 # Some cores require a bios message to be skipped, eg FDS and Saturn. Try a value higher than 10
 skiptime="10"
+
+# M82 mode. Edit /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/m82_list.txt to customize the m82 list with your favorite games.
+m82="no"
+m82timer="30"
+
+# --------- GREATEST OF ALL TIME LIST ---------
+# This is a curated list of games for different cores with great Attract Modes.
+# Feel free to edit it to your liking at /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/sam_goat_list.txt
+sam_goat_list="no"
 
 # Alternative way of selecting cores. Based on how many games a system has.
 coreweight="No"
@@ -62,11 +72,6 @@ coreweight="No"
 # --------- ARCADE ORIENTATION ---------
 # Set Arcade orientation to "horizontal" "vertical" or leave empty
 arcadeorient=""
-
-# --------- GREATEST OF ALL TIME LIST ---------
-# This is a curated list of games for different cores with great Attract Modes.
-# Feel free to edit it to your liking at /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/sam_goat_list.txt
-sam_goat_list="no"
 
 # --------- PATH FILTER ---------
 # If you would like to only play games from a subdirectory of your games folder, put it here
