--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -192,6 +192,10 @@ ttyname_cleanup="no"
 # How fast the scrolling speed should be. Options are slower, normal or faster
 ttyscroll_speed="normal"
 
+#Disable NES bootrom. If you have a game set to start when you are starting the NES core, this game will show for a brief second before SAM loads a new one. 
+#This setting makes sure no bootrom is loaded
+disablebootrom="Yes"
+
 # -------- DEBUG --------
 samdebug="No"
 # Write debug message to file at /tmp/samdebug.log
