--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -58,8 +58,9 @@ kids_safe="no"
 skiptime="10"
 
 # M82 mode. Edit /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/m82_list.txt to customize the m82 list with your favorite games.
+# Set M82 gametimer (in secs) for how long you want games to be playable. Original M82 has settings for 30 seconds, 3 minutes (180 secs), 6 minutes (360 secs) and 128 minutes (7680 secs).
 m82="no"
-m82timer="23"
+m82_gametimer="180"
 
 # This is a curated list of games for different cores with great Attract Modes.
 # Feel free to edit it to your liking at /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/sam_goat_list.txt
