--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -46,6 +46,10 @@ dupe_mode="normal"
 # While SAM is primarily meant as a way to enjoy the pixel art of random games, roulette mode let's you play those games while continuing to shuffle.
 roulettetimer="500"
 
+# When pushing "next game" button on controller, do we want to ignore the game that is currently on. 
+# Only works if controller has been configured in menu (or try default button "select")
+ignore_when_skip="no"
+
 # The Amigavision image contains demos and games. Here you can select what Amiga content you want SAM to show. Options are "Demos", "Games" or "All"
 amigaselect="All"
 
