--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -61,7 +61,8 @@ kids_safe="no"
 # Some cores require a bios message to be skipped, eg FDS and Saturn. Try a value higher than 10
 skiptime="10"
 
-# M82 mode. Edit /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/m82_list.txt to customize the m82 list with your favorite games.
+# Turn your MiSTer into a M82 NES unit - A kiosk display system for NES games that you'd find in a game store in the 80s and 90s.
+# Edit /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/m82_list.txt to customize the m82 list with your favorite games. The system has 12 slots.
 # Set M82 gametimer (in secs) for how long you want games to be playable. Original M82 has settings for 30 seconds, 3 minutes (180 secs), 6 minutes (360 secs) and 128 minutes (7680 secs).
 m82="no"
 m82_gametimer="180"
