--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -64,8 +64,10 @@ skiptime="10"
 # Turn your MiSTer into a M82 NES unit - A kiosk display system for NES games that you'd find in a game store in the 80s and 90s.
 # Edit /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/m82_list.txt to customize the m82 list with your favorite games. The system has 12 slots.
 # Set M82 gametimer (in secs) for how long you want games to be playable. Original M82 has settings for 30 seconds, 3 minutes (180 secs), 6 minutes (360 secs) and 128 minutes (7680 secs).
+# If mute is set to yes, sound will only come on when a button is pushed to play the game
 m82="no"
 m82_gametimer="180"
+m82_mute="no"
 
 # This is a curated list of games for different cores with great Attract Modes.
 # Feel free to edit it to your liking at /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/sam_goat_list.txt
