--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -27,7 +27,7 @@ corelist="amiga,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,
 
 # When SAM starts, mute global or core volume. Core volume can't be muted completely.
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
-# Options are Global (Mute global volume) No (to always play game sounds) or Core (to mute cores individually). "Yes" can also be set which is the same as core. 
+# Options are Global (Mute global volume) No (to always play game sounds) or Core (to mute cores individually). "Yes" can also be set which is the same as global. 
 # Please use "core" for BGM support or use the menu to configure BGM automatically
 mute="No"
 
