--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -25,11 +25,19 @@ menuonly="Yes"
 # Valid options: amiga,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,n64,neogeo,nes,s32x,saturn,sgb,sms,snes,tgfx16,tgfx16cd,psx
 corelist="amiga,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,n64,neogeo,nes,s32x,saturn,sgb,sms,snes,tgfx16,tgfx16cd,psx"
 
-# When SAM starts, mute global or core volume. Core volume can't be muted completely.
+# When SAM starts, mute volume. Playing a game will turn on volume.
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
-# Options are Global (Mute global volume) No (to always play game sounds) or Core (to mute cores individually). "Yes" can also be set which is the same as global. 
-# Please use "core" for BGM support or use the menu to configure BGM automatically
+# Options are Yes or No 
 mute="No"
+
+# SAM supports Background Music Player
+# Drop pls or mp3s in /media/fat/music. More info at https://github.com/wizzomafizzo/MiSTer_BGM
+# For automated install, set up BGM through SAM's menu (Select "Background Music Player")
+bgm="No"
+
+# A Hardware Add-On display for MiSTer
+# "Yes" shows the text name of the game being played. Find more options at bottom of file.
+ttyenable="No"
 
 # How do we exit SAM?
 # "No" - SAM will reboot to MiSTer Menu when a button is pushed. 
@@ -37,7 +45,7 @@ mute="No"
 # "Yes" - SAM will stay in the current game when exiting.
 playcurrentgame="Yes" 
 
-# How to handle duplicate roms. Can be "normal" or "strict". Strict will only keep one version of a game (so no betas, hacks etc..)
+# How to handle duplicate roms. Can be "normal" or "strict". Strict will only keep one version of a game so no betas or hacks for this game in SAM.
 dupe_mode="normal"
 
 # ---------- SPECIAL MODES --------------
@@ -147,15 +155,7 @@ sv_archive_crtlist="https://archive.org/download/640x240_videogame_commercials/6
 sv_youtube_hdmilist="/media/fat/Scripts/.MiSTer_SAM/sv_yt360_list.txt"
 sv_youtube_crtlist="/media/fat/Scripts/.MiSTer_SAM/sv_yt240_list.txt"
 
-# -------- TTY2OLED SETTINGS -------
-# Options for https://github.com/venice1200/MiSTer_tty2oled - a Hardware Add-On display for MiSTer
-# "Yes" shows the text name of the game being played
-ttyenable="No"
-
 # -------- BGM SETTINGS -------
-# SAM supports BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). 
-# It's best practice to set up BGM through the SAM menu (Select "Background Music Player")
-bgm="No"
 # Change bgmplay to no if songs play twice in BGM
 bgmplay="Yes"
 # Stop BGM when SAM stops
