--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -33,10 +33,12 @@ mute="No"
 # SAM supports Background Music Player
 # Drop pls or mp3s in /media/fat/music. More info at https://github.com/wizzomafizzo/MiSTer_BGM
 # For automated install, set up BGM through SAM's menu (Select "Background Music Player")
+# Find more options at bottom of file.
 bgm="No"
 
 # A Hardware Add-On display for MiSTer
-# "Yes" shows the text name of the game being played. Find more options at bottom of file.
+# "Yes" shows the text name of the game being played. 
+# Find more options at bottom of file.
 ttyenable="No"
 
 # How do we exit SAM?
