--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -51,10 +51,30 @@ playcurrentgame="Yes"
 dupe_mode="normal"
 
 # ---------- SPECIAL MODES --------------
+# This is a curated list of games for different cores with great Attract Modes.
+# Feel free to edit it to your liking at /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/sam_goat_list.txt
+sam_goat_list="no"
+
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
 # While SAM is primarily meant as a way to enjoy the pixel art of random games, roulette mode let's you play those games while continuing to shuffle.
 roulettetimer="500"
+
+# Turn your MiSTer into a M82 NES unit - A kiosk display system for NES games that you'd find in a game store in the 80s and 90s.
+# Edit /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/m82_list.txt to customize the m82 list with your favorite games. The system has 12 slots.
+# Set M82 gametimer (in secs) for how long you want games to be playable. Original M82 has settings for 30 seconds, 3 minutes (180 secs), 6 minutes (360 secs) and 128 minutes (7680 secs).
+# If m82_mute is set to yes, sound will only come on when a button is pushed to play the game
+m82="no"
+m82_gametimer="180"
+m82_mute="no"
+
+# Good to use if you have young children. Limits rom selection to ESRB rated games with the "All Ages" label
+# Please update SAM after enabling this to download the ESRB game whitelists
+# Some cores like MegaCD will only have very few games so it's best to use coreweight which you can find further down in this ini
+kids_safe="no"
+
+# Alternative way of selecting cores. Based on how many games a system has.
+coreweight="No"
 
 # When pushing "next game" button on controller, do we want to ignore the current game from now on?
 # Only works if controller has been configured in menu (or try default button "select")
@@ -63,28 +83,8 @@ ignore_when_skip="no"
 # The Amigavision image contains demos and games. Here you can select what Amiga content you want SAM to show. Options are "Demos", "Games" or "All"
 amigaselect="All"
 
-# Good to use if you have young children. Limits rom selection to ESRB rated games with the "All Ages" label
-# Please update SAM after enabling this to download the ESRB game whitelists
-# Some cores like MegaCD will only have very few games so it's best to use coreweight which you can find further down in this ini
-kids_safe="no"
-
 # Some cores require a bios message to be skipped, eg FDS and Saturn. Try a value higher than 10
 skiptime="10"
-
-# Turn your MiSTer into a M82 NES unit - A kiosk display system for NES games that you'd find in a game store in the 80s and 90s.
-# Edit /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/m82_list.txt to customize the m82 list with your favorite games. The system has 12 slots.
-# Set M82 gametimer (in secs) for how long you want games to be playable. Original M82 has settings for 30 seconds, 3 minutes (180 secs), 6 minutes (360 secs) and 128 minutes (7680 secs).
-# If mute is set to yes, sound will only come on when a button is pushed to play the game
-m82="no"
-m82_gametimer="180"
-m82_mute="no"
-
-# This is a curated list of games for different cores with great Attract Modes.
-# Feel free to edit it to your liking at /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/sam_goat_list.txt
-sam_goat_list="no"
-
-# Alternative way of selecting cores. Based on how many games a system has.
-coreweight="No"
 
 # --------- ARCADE ORIENTATION ---------
 # Set Arcade orientation to "horizontal" "vertical" or leave empty
