--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -28,7 +28,7 @@ corelist="amiga,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,
 # When SAM starts, mute volume. Playing a game will turn on volume.
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
 # Options are Yes or No 
-mute="No"
+mute="Yes"
 
 # SAM supports Background Music Player
 # Drop pls or mp3s in /media/fat/music. More info at https://github.com/wizzomafizzo/MiSTer_BGM
