--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -1,4 +1,4 @@
-name: Copy Files from main to updateall
+name: Update and Copy Files
 
 on:
   push:
@@ -6,66 +6,56 @@ on:
       - main
 
 jobs:
-  copy-files:
+  update-main:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout updateall branch
-      uses: actions/checkout@v2
-      with:
-        ref: updateall
-        checkout: true
+      - name: Checkout main branch
+        uses: actions/checkout@v2
+        with:
+          ref: main
 
-    - name: Fetch and merge remote changes
-      run: |
-        git fetch origin updateall
-        git merge origin/updateall
+      - name: Update MiSTer_SAM.ini
+        run: |
+          cp MiSTer_SAM.ini .MiSTer_SAM/MiSTer_SAM.default.ini
 
-    - name: Delete all files in Scripts folder
-      run: |
-        rm -rf Scripts
+      - name: Commit and push update to main
+        run: |
+          git config --local user.email "github-actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add .
+          git commit -m "Update MiSTer_SAM.ini"
+          git push
 
-    - name: Checkout main branch
-      uses: actions/checkout@v2
-      with:
-        ref: main
-        path: main
-
-    - name: Copy Files to Scripts subfolder
-      run: |
-        mkdir -p Scripts
-        cp main/MiSTer_SAM.ini main/.MiSTer_SAM/MiSTer_SAM.default.ini
-        rsync -av --exclude ".git" --exclude ".github" --exclude "tools-extras" --exclude "sam_controllers.json" --exclude "MiSTer_SAM.ini" --exclude "README.md" --exclude "MiSTer_SAMdb.json" --exclude "Media" main/ Scripts/
-        rm -rf main
-
-    - name: Commit changes
-      run: |
-        git add -A
-        git config --local user.email "github-actions@github.com"
-        git config --local user.name "Github Actions"
-        git commit -m "Copy Files from main"
-
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: updateall
-
-  build_db:
-    needs: copy-files
-    runs-on: ubuntu-22.04
-
+  copy-to-updateall:
+    needs: update-main
+    runs-on: ubuntu-latest
     steps:
-    - name: Install apt-get utilities
-      run: sudo apt-get install detox sharutils
+      - name: Checkout updateall branch
+        uses: actions/checkout@v2
+        with:
+          ref: updateall
+          fetch-depth: 0
 
-    - uses: actions/checkout@v2
-      with:
-        ref: updateall
-        checkout: true
+      - name: Delete all files in Scripts folder
+        run: |
+          rm -rf Scripts
 
-    - name: Build Custom Database for MiSTer Downloader
-      run: set -o pipefail && curl --fail --location https://raw.githubusercontent.com/theypsilon/Downloader_DB-Template_MiSTer/main/.github/build_db.py | python3 -
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        DB_ID: MiSTer_SAM_files
+      - name: Checkout main branch with updated files
+        uses: actions/checkout@v2
+        with:
+          ref: main
+          path: main
+
+      - name: Copy Files to Scripts subfolder
+        run: |
+          mkdir -p Scripts
+          cp -r main/* Scripts/
+          rm -rf main
+
+      - name: Commit changes to updateall
+        run: |
+          git config --local user.email "github-actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add .
+          git commit -m "Copy updated files from main to updateall"
+          git push origin updateall
