--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -136,6 +136,8 @@ samvideo_output="HDMI"
 # Change the following setting if you can only hear the audio of the video and SAM shows the Menu core. Some displays need more time.
 # Setting should be 2 or more. Try higher values if you encounter issues
 samvideo_displaywait="3"
+# Use the download manager for improved download speeds from archive.org
+download_manager="yes"
 # Alternate with every core played, play video like another core or only play videos - Options are alternate, core or only
 samvideo_freq="alternate"
 #Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
