--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -138,9 +138,16 @@ samvideo_output="HDMI"
 samvideo_displaywait="3"
 # Use the download manager for improved download speeds from archive.org
 download_manager="yes"
+# Customize lists for youtube, archive or local playback
+# Due to the MiSTer CPU not being very powerful
+# Recommended video codec is XVID in 640x480 for HDMI or 640x240 for CRT
+samvideo_path="/media/fat/video"
+# This option will download all commercials to samvideo_path
+keep_local_copy="no"
 # Alternate with every core played, play video like another core or only play videos - Options are alternate, core or only
 samvideo_freq="alternate"
 #Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
+#If you're having issues with Youtube, try deleting /media/fat/Scripts/.MiSTer_SAM/ytdl file
 samvideo_source="archive"
 # Play a TV commercial of eg SNES and than show the corresponding SNES game. Only works for archive.org list.
 samvideo_tvc="no"
@@ -150,10 +157,6 @@ sv_aspectfix_vmode="no"
 samvideo_crtmode640="video_mode=640,16,64,80,240,1,3,14,12380"
 # For CRT playback on youtube playback we use 320x240
 samvideo_crtmode320="video_mode=320,-16,32,32,240,1,3,13,5670"
-# Customize lists for youtube, archive or local playback
-# Due to the MiSTer CPU not being very powerful
-# Recommended video codec is XVID in 640x480 for HDMI or 640x240 for CRT
-samvideo_path="/media/fat/video"
 sv_archive_hdmilist="https://archive.org/download/640x480_videogame_commercials/640x480_videogame_commercials_files.xml"
 sv_archive_crtlist="https://archive.org/download/640x240_videogame_commercials/640x240_videogame_commercials_files.xml"
 sv_youtube_hdmilist="/media/fat/Scripts/.MiSTer_SAM/sv_yt360_list.txt"
