--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -18,7 +18,7 @@ samtimeout=60
 gametimer=180
 
 # Start SAM only from MiSTer main menu
-# If menuonly is set to "No", SAM will always start after you put down the controller. 
+# If menuonly is set to "No", SAM will start from an active core after you put down the controller. 
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode?
