--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -173,10 +173,13 @@ bgmstop="Yes"
 # NOTE - This feature will write to the SD card on start and stop of SAM so by default it's off
 gvoladjust="0"
 
-# SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
-norepeat="Yes"
 
 # -------- ADVANCED (HANDLE WITH CARE) --------
+
+# SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
+norepeat="Yes"
+# SAM will not use the blacklist feature to disable cores with static screens
+disable_blacklist="No"
 
 # -------- BUTTON DETECTION --------
 # When you push a button or move the mouse, interrupt SAM
