--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -178,7 +178,7 @@ gvoladjust="0"
 
 # SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
 norepeat="Yes"
-# SAM will not use the blacklist feature to disable cores with static screens
+# Disable SAM's blacklist feature which disables games with static screens
 disable_blacklist="No"
 
 # -------- BUTTON DETECTION --------
