--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -176,10 +176,14 @@ gvoladjust="0"
 
 # -------- ADVANCED (HANDLE WITH CARE) --------
 
+# ------- Quality of Life Features --------
 # SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
 norepeat="Yes"
 # Disable SAM's blacklist feature which disables games with static screens
 disable_blacklist="No"
+#Disable NES bootrom. If you have a game set to start when you are starting the NES core, this game will show for a brief second before SAM loads a new one. 
+#This setting makes sure no bootrom is loaded
+disablebootrom="Yes"
 
 # -------- BUTTON DETECTION --------
 # When you push a button or move the mouse, interrupt SAM
@@ -209,10 +213,6 @@ ttybig="no"
 ttyname_cleanup="no"
 # How fast the scrolling speed should be. Options are slower, normal or faster
 ttyscroll_speed="normal"
-
-#Disable NES bootrom. If you have a game set to start when you are starting the NES core, this game will show for a brief second before SAM loads a new one. 
-#This setting makes sure no bootrom is loaded
-disablebootrom="Yes"
 
 # -------- DEBUG --------
 samdebug="No"
