--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -176,16 +176,16 @@ gvoladjust="0"
 
 # -------- ADVANCED (HANDLE WITH CARE) --------
 
-# ------- Quality of Life Features --------
+# QUALITY OF LIFE FEATURES
 # SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
 norepeat="Yes"
-# Disable SAM's blacklist feature which disables games with static screens
+# Disables SAM's blacklist feature which blocks games with static screens
 disable_blacklist="No"
 #Disable NES bootrom. If you have a game set to start when you are starting the NES core, this game will show for a brief second before SAM loads a new one. 
 #This setting makes sure no bootrom is loaded
 disablebootrom="Yes"
 
-# -------- BUTTON DETECTION --------
+# BUTTON DETECTION
 # When you push a button or move the mouse, interrupt SAM
 
 # SAM tries to listen for controller buttons, mouse movement, mouse buttons, and keyboard input
@@ -196,7 +196,7 @@ listenkeyboard="Yes"
 listenjoy="Yes"
 
 
-# -------- TTY2OLED ADVCANCED SETTINGS -------
+# TTY2OLED ADVCANCED SETTINGS
 # All needed values are read from the tty2oled INI files
 
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
@@ -214,7 +214,7 @@ ttyname_cleanup="no"
 # How fast the scrolling speed should be. Options are slower, normal or faster
 ttyscroll_speed="normal"
 
-# -------- DEBUG --------
+# DEBUG 
 samdebug="No"
 # Write debug message to file at /tmp/samdebug.log
 samdebuglog="No"
