--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -152,7 +152,7 @@ samvideo_source="archive"
 # Play a TV commercial of eg SNES and than show the corresponding SNES game. Only works for archive.org list.
 samvideo_tvc="no"
 # For HDMI playback if your device shows black bars, try setting sv_aspectfix_vmode to yes. 
-sv_aspectfix_vmode="no"
+sv_aspectfix_vmode="yes"
 # For CRT playback on archive playback we use 640x240
 samvideo_crtmode640="video_mode=640,16,64,80,240,1,3,14,12380"
 # For CRT playback on youtube playback we use 320x240
