--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -35,6 +35,8 @@ corelist="amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
 # Options are Yes or No 
 mute="Yes"
+# In case you turn off your MiSTer while SAM is running, we need to unmute on bootup
+unmute_on_boot="Yes"
 
 # SAM supports Background Music Player
 # Drop pls or mp3s in /media/fat/music. More info at https://github.com/wizzomafizzo/MiSTer_BGM
