--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -34,12 +34,12 @@ corelist="amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c
 # When SAM starts, mute volume. Playing a game will turn on volume.
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
 # Options are Yes or No 
+# NOTE - MUTE gets overridden if BGM is active.
 mute="Yes"
 
 # SAM supports Background Music Player
 # Drop pls or mp3s in /media/fat/music. More info at https://github.com/wizzomafizzo/MiSTer_BGM
 # For automated install, set up BGM through SAM's menu (Select "Background Music Player")
-# Find more options at bottom of file.
 bgm="No"
 # Stop BGM when SAM stops
 bgmstop="Yes"
