--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -29,7 +29,7 @@ playcurrentgame="Yes"
 
 # Which systems would you like to display in Attract Mode?
 # Valid options: amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,coco2,fds,gb,gbc,gba,genesis,gg,megacd,n64,neogeo,neogeocd,nes,s32x,saturn,sgb,sms,snes,tgfx16,tgfx16cd,psx
-corelist="amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,coco2,fds,gb,gbc,gba,genesis,gg,megacd,n64,neogeo,neogeocd,nes,s32x,saturn,sgb,sms,snes,tgfx16,tgfx16cd,psx"
+corelist="amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,coco2,fds,gb,gbc,gba,genesis,gg,megacd,n64,neogeo,neogeocd,nes,s32x,saturn,sgb,sms,snes,tgfx16,tgfx16cd,psx,x68k"
 
 # When SAM starts, mute volume. Playing a game will turn on volume.
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
